--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "mysql": "^2.16.0",
@@ -12,7 +13,12 @@
   },
   "devDependencies": {
     "nodemon": "^1.18.4",
+    "pm2": "^3.2.2",
     "pug": "^2.0.3",
     "winston-daily-rotate-file": "^3.3.3"
+  },
+  "scripts": {
+    "start:dev": "NODE_ENV=dev pm2 start src/server.js",
+    "start:prod": "NODE_ENV=production pm2 start src/server.js"
   }
 }
