--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "winston-daily-rotate-file": "^3.3.3"
   },
   "scripts": {
+    "dev": "PORT=3000 nodemon src/server",
     "start:dev": "pm2 start ecosystem.config.js",
     "start:prod": "pm2 start ecosystem.config.js --env production",
     "ps": "pm2 list",
